--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <title>دکتر سعید مجتبی‌زاده</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1, user-scalable=no">
-  <meta name="description" content="اولین فوق‌دکتری مهندسی ژئوتکنیک لرزه‌ای در ایران">
+  <meta name="description" content="فوق‌دکتری مهندسی عمران-ژئوتکنیک لرزه‌ای">
   <meta name="keywords" content="دکتر سعید مجتبی‌زاده, Saeed Mojtabazadeh, ژئوتکنیک, پژوهشگر, نوآوری علمی">
   <meta name="author" content="Saeed Mojtabazadeh">
 
@@ -168,7 +168,7 @@
 
   <div class="title-wrapper">
     <h1 class="title-line" id="main-title">دکتر سعید مجتبی‌زاده</h1>
-    <h2 class="title-sub" id="sub-title">اولین فوق‌دکتری مهندسی ژئوتکنیک لرزه‌ای در ایران</h2>
+    <h2 class="title-sub" id="sub-title">فوق‌دکتری مهندسی عمران-ژئوتکنیک لرزه‌ای</h2>
   </div>
 
   <div class="link-bar" id="links"></div>
@@ -184,7 +184,7 @@
 
   <script defer>
     const data = {
-      fa:{title:"دکتر سعید مجتبی‌زاده",sub:"اولین فوق‌دکتری مهندسی ژئوتکنیک لرزه‌ای در ایران",links:[
+      fa:{title:"دکتر سعید مجتبی‌زاده",sub:"فوق‌دکتری مهندسی عمران-ژئوتکنیک لرزه‌ای",links:[
         {text:"پایگاه شخصی",href:"http://mojtabazadeh.ir/"},
         {text:"پایگاه مقالات",href:"http://www.drmojtabazadeh.ir/"},
         {text:"پایگاه مطالعات",href:"http://www.smojtabazadeh.ir/"},
