--- a/index.html
+++ b/index.html
@@ -151,7 +151,7 @@
   <canvas id="particles"></canvas>
 
   <div class="lang-switch">
-    <button id="btn-fa">Fa</button>
+    <button id="btn-fa">فا</button>
     <button id="btn-en">En</button>
   </div>
 
