--- a/index.html
+++ b/index.html
@@ -191,7 +191,7 @@
         {text:"اینستاگالری",href:"https://www.instagallery.ir/"},
         {text:"پایگاه اَپرچِر",href:"http://mojtabazadeh-hasanlouei.ir/"},
         {text:"گوگل اسکالر",href:"https://scholar.google.com/citations?user=YphpjTcAAAAJ&hl=en"},
-        {text:"پروفایل اورکید",href:"https://orcid.org/0000-0001-8508-4837"},
+        {text:"پروفایل اُرکید",href:"https://orcid.org/0000-0001-8508-4837"},
         {text:"پایگاه انگلیسی",href:"https://www.mojtabazade.ir/"},
       ]},
       en:{title:"Dr. Saeed Mojtabazadeh",sub:"Postdoc Fellow in Geotechnical Engineering",links:[
