--- a/index.html
+++ b/index.html
@@ -4,12 +4,7 @@
   <meta charset="UTF-8">
   <title>دکتر سعید مجتبی‌زاده</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1, user-scalable=no">
-  <meta name="description" content="فوق‌دکتری مهندسی عمران-ژئوتکنیک لرزه‌ای">
-  <meta name="keywords" content="دکتر سعید مجتبی‌زاده, Saeed Mojtabazadeh, ژئوتکنیک, پژوهشگر, نوآوری علمی">
-  <meta name="author" content="Saeed Mojtabazadeh">
-
   <link href="https://fonts.googleapis.com/css2?family=Vazirmatn:wght@400;600;800&family=Poppins:wght@400;600&display=swap" rel="stylesheet">
-
   <style>
     *{box-sizing:border-box;margin:0;padding:0}
     html,body{width:100%;height:100%;overflow-x:hidden}
@@ -17,11 +12,8 @@
       font-family:'Vazirmatn',sans-serif;
       background:linear-gradient(135deg,#1a0033,#3b0066,#660099,#9933cc);
       background-attachment: fixed;
-      color:white;
-      text-align:center;
-      display:flex;
-      flex-direction:column;
-      align-items:center;
+      color:white;text-align:center;
+      display:flex;flex-direction:column;align-items:center;
       padding:20px 10px 40px;
     }
     body.lang-en{font-family:'Poppins',sans-serif;direction:ltr;text-align:center}
@@ -46,11 +38,8 @@
     }
     .title-sub {font-size:clamp(1rem,3vw,1.2rem);color:#e0c7ff;font-weight:600;margin-top:4px;text-shadow:0 1px 3px rgba(0,0,0,0.4)}
 
-    .link-bar {
-      display:flex;flex-wrap:wrap;justify-content:center;
-      gap:10px;max-width:95vw;margin-bottom:16px;
-      animation:fadeInUp 1.2s ease forwards;opacity:0;transform:translateY(10px);
-    }
+    .link-bar {display:flex;flex-wrap:wrap;justify-content:center;gap:10px;max-width:95vw;margin-bottom:16px;
+      animation:fadeInUp 1.2s ease forwards;opacity:0;transform:translateY(10px);}
     .link-bar a {
       background:rgba(255,255,255,0.1);color:white;
       padding:8px 14px;border-radius:25px;
@@ -61,51 +50,49 @@
 
     .frame-wrapper {width:95%;max-width:900px;aspect-ratio:16/9;border-radius:16px;overflow:hidden;
       margin-top:10px;background:rgba(0,0,0,0.25);backdrop-filter:blur(4px);
-      animation:fadeInUp 1.4s ease forwards;opacity:0;transform:translateY(10px)
-    }
+      animation:fadeInUp 1.4s ease forwards;opacity:0;transform:translateY(10px)}
     .frame-wrapper iframe {width:100%;height:100%;border:none;display:block;border-radius:16px}
 
     .footer {font-size:0.8rem;margin-top:18px;opacity:0.7}
     .footer a {color:white;text-decoration:none}
 
     .lang-switch {position:fixed;top:12px;left:12px;display:flex;gap:6px;z-index:99}
-    .lang-switch button {
+    .lang-switch button,.about-switch button {
       background:rgba(255,255,255,0.15);color:white;border:none;
       padding:6px 12px;border-radius:50px;cursor:pointer;font-size:0.8rem;
       transition:all 0.3s ease;
     }
-    .lang-switch button:hover {background:rgba(255,255,255,0.3);transform:scale(1.05)}
+    .lang-switch button:hover,.about-switch button:hover {background:rgba(255,255,255,0.3);transform:scale(1.05)}
 
-    /* دکمه درباره من */
-    #about-btn {
-      background:rgba(255,255,255,0.15);color:white;border:none;
-      padding:6px 12px;border-radius:50px;cursor:pointer;font-size:0.8rem;
-      transition:all 0.3s ease;
-    }
-    #about-btn:hover {background:rgba(255,255,255,0.3);transform:scale(1.05)}
+    .about-switch {position:fixed;top:12px;right:12px;z-index:99}
 
-    /* مودال درباره من */
+    /* ✅ مودال با افکت محو شونده */
     #about-modal {
-      display:none;position:fixed;top:50%;left:50%;transform:translate(-50%,-50%);
-      background:rgba(40,0,70,0.95);color:white;padding:20px;
-      max-width:400px;max-height:70vh;overflow-y:auto;
-      border-radius:12px;box-shadow:0 0 20px rgba(200,150,255,0.6);z-index:100;text-align:justify;line-height:1.7
+      opacity:0;
+      pointer-events:none;
+      transition:opacity 0.4s ease;
+      position:fixed;top:50%;left:50%;transform:translate(-50%,-50%);
+      background:rgba(40,0,70,0.95);color:white;
+      padding:20px;width:90%;max-width:500px;max-height:75vh;
+      overflow-y:auto;border-radius:12px;
+      box-shadow:0 0 20px rgba(200,150,255,0.6);
+      z-index:100;text-align:justify;line-height:1.8;font-size:0.9rem;
     }
+    #about-modal.show {opacity:1;pointer-events:auto}
     #about-modal h3 {margin-bottom:10px;font-size:1.1rem;color:#ffccff;text-align:center}
     #about-close {
       background:rgba(255,255,255,0.2);border:none;color:white;
-      padding:4px 10px;border-radius:8px;margin-top:10px;cursor:pointer;display:block;margin-left:auto;margin-right:auto
+      padding:4px 10px;border-radius:8px;margin-top:10px;
+      cursor:pointer;display:block;margin-left:auto;margin-right:auto
     }
     #about-close:hover {background:rgba(255,255,255,0.35)}
 
-    @keyframes fadeInUp {to {opacity:1;transform:translateY(0)}}
-    @keyframes glowPulse {0%,100%{text-shadow:0 0 8px rgba(200,150,255,0.6)}50%{text-shadow:0 0 14px rgba(200,150,255,1)}}
-
     @media(max-width:480px){
       .profile-container{width:120px;height:120px}
-      .link-bar{gap:6px}
-      .link-bar a{padding:6px 10px}
+      .link-bar{gap:6px}.link-bar a{padding:6px 10px}
     }
+    @keyframes fadeInUp {to {opacity:1;transform:translateY(0)}}
+    @keyframes glowPulse {0%,100%{text-shadow:0 0 8px rgba(200,150,255,0.6)}50%{text-shadow:0 0 14px rgba(200,150,255,1)}}
   </style>
 </head>
 <body>
@@ -114,8 +101,8 @@
   <div class="lang-switch">
     <button id="btn-fa">Fa</button>
     <button id="btn-en">En</button>
-    <button id="about-btn">درباره من</button>
   </div>
+  <div class="about-switch"><button id="about-btn">درباره من</button></div>
 
   <div class="profile-container">
     <svg viewBox="0 0 100 100" preserveAspectRatio="xMidYMid slice">
@@ -139,7 +126,6 @@
     © <a href="http://www.mojtabazadeh.ir/" target="_blank">Saeed Mojtabazadeh | www.mojtabazadeh.ir</a>
   </div>
 
-  <!-- مودال درباره من -->
   <div id="about-modal">
     <h3 id="about-title"></h3>
     <p id="about-text"></p>
@@ -179,7 +165,8 @@
           linksContainer=document.getElementById("links"),
           aboutModal=document.getElementById("about-modal"),
           aboutTitle=document.getElementById("about-title"),
-          aboutText=document.getElementById("about-text");
+          aboutText=document.getElementById("about-text"),
+          aboutClose=document.getElementById("about-close");
 
     function buildLinks(lang){
       linksContainer.innerHTML="";
@@ -189,7 +176,6 @@
         linksContainer.appendChild(a);
       });
     }
-
     function switchLang(lang){
       localStorage.setItem("lang",lang);
       mainTitle.textContent=data[lang].title;
@@ -205,24 +191,21 @@
     document.getElementById("btn-fa").onclick=()=>switchLang("fa");
     document.getElementById("btn-en").onclick=()=>switchLang("en");
 
-    // About Modal
     document.getElementById("about-btn").onclick=()=>{
       const lang=localStorage.getItem("lang")||"fa";
       aboutTitle.textContent=data[lang].aboutTitle;
       aboutText.textContent=data[lang].aboutText;
-      aboutModal.style.display="block";
+      aboutClose.textContent = (lang==="fa") ? "بستن" : "Close";
+      aboutModal.classList.add("show");
     };
-    document.getElementById("about-close").onclick=()=>aboutModal.style.display="none";
+    aboutClose.onclick=()=>aboutModal.classList.remove("show");
 
-    // Particles (کد ذرات شما اینجاست)
+    // Particles
     const canvas=document.getElementById("particles"),ctx=canvas.getContext("2d");
     let particles=[];
     function createParticles(){
       const count=Math.floor((window.innerWidth*window.innerHeight)/12000);
-      particles=Array.from({length:count},()=>({
-        x:Math.random()*window.innerWidth,y:Math.random()*window.innerHeight,
-        r:Math.random()*1.8+1,dx:(Math.random()-0.5)*0.4,dy:(Math.random()-0.5)*0.4
-      }));
+      particles=Array.from({length:count},()=>({x:Math.random()*window.innerWidth,y:Math.random()*window.innerHeight,r:Math.random()*1.8+1,dx:(Math.random()-0.5)*0.4,dy:(Math.random()-0.5)*0.4}));
     }
     function resizeParticles(){
       const ratio=window.devicePixelRatio||1;
@@ -242,11 +225,8 @@
       ctx.strokeStyle="rgba(200,150,255,0.2)";ctx.lineWidth=0.5;
       for(let i=0;i<particles.length;i++){
         for(let j=i+1;j<particles.length;j++){
-          const dx=particles[i].x-particles[j].x,dy=particles[i].y-particles[j].y;
-          const dist=Math.sqrt(dx*dx+dy*dy);
-          if(dist<120){
-            ctx.beginPath();ctx.moveTo(particles[i].x,particles[i].y);ctx.lineTo(particles[j].x,particles[j].y);ctx.stroke();
-          }
+          const dx=particles[i].x-particles[j].x,dy=particles[i].y-particles[j].y,dist=Math.sqrt(dx*dx+dy*dy);
+          if(dist<120){ctx.beginPath();ctx.moveTo(particles[i].x,particles[i].y);ctx.lineTo(particles[j].x,particles[j].y);ctx.stroke();}
         }
       }
       requestAnimationFrame(draw);
