--- a/index.html
+++ b/index.html
@@ -56,15 +56,30 @@
     .footer {font-size:0.8rem;margin-top:18px;opacity:0.7}
     .footer a {color:white;text-decoration:none}
 
-    .lang-switch {position:fixed;top:12px;left:12px;display:flex;gap:6px;z-index:99}
+    .lang-switch, .about-switch {
+      position:fixed;top:12px;display:flex;gap:6px;z-index:99
+    }
+    .lang-switch {left:12px}
+    .about-switch {right:12px}
+
     .lang-switch button,.about-switch button {
       background:rgba(255,255,255,0.15);color:white;border:none;
-      padding:6px 12px;border-radius:50px;cursor:pointer;font-size:0.8rem;
-      transition:all 0.3s ease;
+      padding:6px 12px;border-radius:50px;cursor:pointer;
+      font-size:0.8rem;transition:all 0.3s ease;
+      min-width:70px; /* ✅ هماهنگی اندازه دکمه‌ها */
+      text-align:center;
     }
     .lang-switch button:hover,.about-switch button:hover {background:rgba(255,255,255,0.3);transform:scale(1.05)}
 
-    .about-switch {position:fixed;top:12px;right:12px;z-index:99}
+    /* ✅ پس‌زمینه نیمه‌شفاف */
+    #modal-overlay {
+      position:fixed;top:0;left:0;width:100%;height:100%;
+      background:rgba(0,0,0,0.5);
+      opacity:0;pointer-events:none;
+      transition:opacity 0.4s ease;
+      z-index:98;
+    }
+    #modal-overlay.show {opacity:1;pointer-events:auto}
 
     /* ✅ مودال با افکت محو شونده */
     #about-modal {
@@ -126,6 +141,7 @@
     © <a href="http://www.mojtabazadeh.ir/" target="_blank">Saeed Mojtabazadeh | www.mojtabazadeh.ir</a>
   </div>
 
+  <div id="modal-overlay"></div>
   <div id="about-modal">
     <h3 id="about-title"></h3>
     <p id="about-text"></p>
@@ -166,7 +182,8 @@
           aboutModal=document.getElementById("about-modal"),
           aboutTitle=document.getElementById("about-title"),
           aboutText=document.getElementById("about-text"),
-          aboutClose=document.getElementById("about-close");
+          aboutClose=document.getElementById("about-close"),
+          overlay=document.getElementById("modal-overlay");
 
     function buildLinks(lang){
       linksContainer.innerHTML="";
@@ -197,8 +214,14 @@
       aboutText.textContent=data[lang].aboutText;
       aboutClose.textContent = (lang==="fa") ? "بستن" : "Close";
       aboutModal.classList.add("show");
+      overlay.classList.add("show");
     };
-    aboutClose.onclick=()=>aboutModal.classList.remove("show");
+    function closeModal(){
+      aboutModal.classList.remove("show");
+      overlay.classList.remove("show");
+    }
+    aboutClose.onclick=closeModal;
+    overlay.onclick=closeModal;
 
     // Particles
     const canvas=document.getElementById("particles"),ctx=canvas.getContext("2d");
