--- a/index.html
+++ b/index.html
@@ -114,8 +114,8 @@
   <canvas id="particles"></canvas>
 
   <div class="lang-switch">
-    <button id="btn-fa">Fa</button>
-    <button id="btn-en">En</button>
+    <button id="btn-fa">فارسی</button>
+    <button id="btn-en">English</button>
   </div>
   <div class="about-switch"><button id="about-btn">درباره من</button></div>
 
