--- a/index.html
+++ b/index.html
@@ -4,10 +4,7 @@
   <meta charset="UTF-8" />
   <title>دکتر سعید مجتبی‌زاده</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1, user-scalable=no" />
-  <link
-    href="https://fonts.googleapis.com/css2?family=Vazirmatn:wght@400;600;800&family=Poppins:wght@400;600&display=swap"
-    rel="stylesheet"
-  />
+  <link href="https://fonts.googleapis.com/css2?family=Vazirmatn:wght@400;600;800&family=Poppins:wght@400;600&display=swap" rel="stylesheet" />
   <style>
     * {
       box-sizing: border-box;
@@ -21,7 +18,7 @@
       overflow-x: hidden;
     }
     body {
-      font-family: "Vazirmatn", sans-serif;
+      font-family: 'Vazirmatn', sans-serif;
       background: linear-gradient(135deg, #1a0033, #3b0066, #660099, #9933cc);
       background-attachment: fixed;
       color: white;
@@ -30,9 +27,10 @@
       flex-direction: column;
       align-items: center;
       padding: 20px 10px 40px;
+      position: relative;
     }
     body.lang-en {
-      font-family: "Poppins", sans-serif;
+      font-family: 'Vazirmatn', 'Poppins', sans-serif;
       direction: ltr;
       text-align: center;
     }
@@ -125,7 +123,7 @@
     .frame-wrapper {
       width: 95%;
       max-width: 900px;
-      aspect-ratio: 16/9;
+      aspect-ratio: 16 / 9;
       border-radius: 16px;
       overflow: hidden;
       margin-top: 10px;
@@ -147,46 +145,52 @@
       font-size: 0.8rem;
       margin-top: 18px;
       opacity: 0.7;
+      user-select: none;
+      white-space: nowrap;
     }
     .footer a {
       color: white;
       text-decoration: none;
     }
 
-    /* دکمه‌های زبان سمت چپ */
-    .lang-switch {
-      position: fixed;
-      top: 12px;
-      left: 12px;
-      display: flex;
-      gap: 6px;
-      z-index: 99;
-      font-size: 0.8rem;
-    }
-    /* دکمه‌های درباره من و تماس کنار هم سمت راست */
+    /* دکمه‌های بالا راست */
     .top-right-buttons {
       position: fixed;
       top: 12px;
       right: 12px;
       display: flex;
-      gap: 10px;
+      gap: 8px;
       z-index: 99;
-      font-size: 0.8rem;
+      flex-wrap: nowrap;
     }
 
-    /* استایل دکمه‌ها هماهنگ و هم اندازه */
+    .lang-switch {
+      position: fixed;
+      top: 12px;
+      left: 12px;
+      display: flex;
+      gap: 8px;
+      z-index: 99;
+      flex-wrap: nowrap;
+    }
+
     .lang-switch button,
     .top-right-buttons button {
       background: rgba(255, 255, 255, 0.15);
       color: white;
       border: none;
-      padding: 6px 14px;
-      border-radius: 50px;
+      padding: 8px 20px;
+      border-radius: 30px;
       cursor: pointer;
-      font-size: 0.8rem;
-      transition: all 0.3s ease;
-      min-width: 70px;
+      font-size: 0.85rem;
+      font-weight: 600;
+      min-width: 90px;
       white-space: nowrap;
+      font-family: 'Vazirmatn', 'Poppins', sans-serif;
+      transition: all 0.3s ease;
+      display: flex;
+      justify-content: center;
+      align-items: center;
     }
     .lang-switch button:hover,
     .top-right-buttons button:hover {
@@ -194,7 +198,7 @@
       transform: scale(1.05);
     }
 
-    /* پس‌زمینه نیمه‌شفاف برای مودال */
+    /* پس‌زمینه نیمه‌شفاف */
     #modal-overlay {
       position: fixed;
       top: 0;
@@ -235,6 +239,7 @@
       text-align: justify;
       line-height: 1.8;
       font-size: 0.9rem;
+      user-select: text;
     }
     #about-modal.show,
     #contact-modal.show {
@@ -247,6 +252,7 @@
       font-size: 1.1rem;
       color: #ffccff;
       text-align: center;
+      user-select: none;
     }
     #about-close,
     #contact-close {
@@ -260,6 +266,11 @@
       display: block;
       margin-left: auto;
       margin-right: auto;
+      min-width: 70px;
+      font-weight: 600;
+      font-family: 'Vazirmatn', 'Poppins', sans-serif;
+      transition: background 0.3s ease;
+      user-select: none;
     }
     #about-close:hover,
     #contact-close:hover {
@@ -277,11 +288,12 @@
       .link-bar a {
         padding: 6px 10px;
       }
+
       .lang-switch button,
       .top-right-buttons button {
-        min-width: 60px;
-        padding: 6px 10px;
-        font-size: 0.75rem;
+        min-width: 70px;
+        padding: 6px 12px;
+        font-size: 0.8rem;
       }
     }
 
@@ -347,23 +359,21 @@
     ></iframe>
   </div>
 
-  <div class="footer">
+  <div class="footer" id="footer-text">
     © Saeed Mojtabazadeh | www.mojtabazadeh.ir
   </div>
 
   <div id="modal-overlay"></div>
 
-  <!-- مودال درباره من -->
   <div id="about-modal">
     <h3 id="about-title"></h3>
     <p id="about-text"></p>
     <button id="about-close">بستن</button>
   </div>
 
-  <!-- مودال تماس -->
   <div id="contact-modal">
     <h3 id="contact-title"></h3>
-    <p id="contact-text"></p>
+    <p id="contact-text" style="white-space: pre-line;"></p>
     <button id="contact-close">بستن</button>
   </div>
 
@@ -380,13 +390,14 @@
           { text: "پایگاه اَپرچِر", href: "http://mojtabazadeh-hasanlouei.ir/" },
           { text: "گوگل اسکالر", href: "https://scholar.google.com/citations?user=YphpjTcAAAAJ&hl=en" },
           { text: "پروفایل اُرکید", href: "https://orcid.org/0000-0001-8508-4837" },
-          { text: "پایگاه انگلیسی", href: "https://www.mojtabazade.ir/" },
+          { text: "پایگاه انگلیسی", href: "https://www.mojtabazade.ir/" }
         ],
         aboutTitle: "درباره من",
         aboutText: `دکتر سعید مجتبی‌زاده حسنلوئی، به عنوان اولین پژوهشگر پسادکتری مهندسی عمران-ژئوتکنیک در ایران، از سال 1394 بر توسعه‌ی الگوریتم‌های محاسباتی و مدلسازی عددی پیشرفته در حوزه‌ی ژئومکانیک لرزه‌ای متمرکز شده است. او رساله‌ی دوره‌ی دکتری تخصصی و طرح پژوهشی پسادکتری خویش را بر مسأله‌ی انتشار و پراکنش امواج لرزه‌ای در محیط‌های با خواص اورتوتروپیک از جمله عوارض توپوگرافی گوناگون، با استفاده از روش اجزای مرزی نیم‌فضای مستقیم در حوزه‌ی زمان معطوف نموده است. از موضوعات پژوهشی مورد علاقه‌ی وی می‌توان به توسعه‌ی روش‌های عددی همچون روش اجزای مرزی، اجزای محدود و رویکردهای ترکیبی جهت مدلسازی و تحلیل عددی مسائل لرزه‌ای، بررسی اثرات ساختگاهی ناشی از حضور عوارض توپوگرافی سطحی و زیر‌سطحی، مکانیک محیط‌های نانو/متخلخل و ایزولاسیون لرزه‌ای اشاره نمود.`,
-        contactTitle: "تماس با من",
-        contactText: `ایمیل: <a href="mailto:mojtabazadeh@outlook.com" style="color:#cc99ff; text-decoration:underline;">mojtabazadeh@outlook.com</a><br>شماره تماس: <a href="tel:+989334115773" style="color:#cc99ff; text-decoration:underline;">+989334115773</a>`,
-        closeText: "بستن",
+        contactTitle: "تماس",
+        contactText: `شماره تماس: +989334115773
+ایمیل: mojtabazadeh@outlook.com`,
+        closeText: "بستن"
       },
       en: {
         title: "Dr. Saeed Mojtabazadeh",
@@ -399,16 +410,18 @@
           { text: "Aperture", href: "http://mojtabazadeh-hasanlouei.ir/" },
           { text: "Google Scholar", href: "https://scholar.google.com/citations?user=YphpjTcAAAAJ&hl=en" },
           { text: "ORCID", href: "https://orcid.org/0000-0001-8508-4837" },
-          { text: "English Website", href: "https://www.mojtabazade.ir/" },
+          { text: "English Website", href: "https://www.mojtabazade.ir/" }
         ],
         aboutTitle: "About Me",
         aboutText: `Dr. Saeed Mojtabazadeh is the pioneering geotechnical engineering postdoctoral researcher in Iran, specializing in computational algorithms. Since 2016, Dr. Mojtabazadeh has been dedicated to advanced numerical modeling in seismic geomechanics. His Ph.D. thesis and postdoctoral research focus on investigating SH-wave propagation in orthotropic mediums, along with topographic features, utilizing an exclusive approach known as the Direct Half-Space Time-Domain Boundary Element Method. He has developed multiple numerical approaches, including the Boundary Element Method (BEM), Finite Element Method (FEM), and Hybrid methods, applied to seismic analysis in geotechnical engineering.`,
-        contactTitle: "Contact Me",
-        contactText: `Email: <a href="mailto:mojtabazadeh@outlook.com" style="color:#cc99ff; text-decoration:underline;">mojtabazadeh@outlook.com</a><br>Phone: <a href="tel:+989334115773" style="color:#cc99ff; text-decoration:underline;">+989334115773</a>`,
-        closeText: "Close",
-      },
+        contactTitle: "Contact",
+        contactText: `Phone: +989334115773
+Email: mojtabazadeh@outlook.com`,
+        closeText: "Close"
+      }
     };
 
+    // المان‌ها
     const mainTitle = document.getElementById("main-title"),
       subTitle = document.getElementById("sub-title"),
       linksContainer = document.getElementById("links"),
@@ -420,119 +433,96 @@
       contactTitle = document.getElementById("contact-title"),
       contactText = document.getElementById("contact-text"),
       contactClose = document.getElementById("contact-close"),
-      overlay = document.getElementById("modal-overlay");
+      modalOverlay = document.getElementById("modal-overlay"),
+      aboutBtn = document.getElementById("about-btn"),
+      contactBtn = document.getElementById("contact-btn"),
+      btnFa = document.getElementById("btn-fa"),
+      btnEn = document.getElementById("btn-en"),
+      footerText = document.getElementById("footer-text"),
+      body = document.body;
 
-    function buildLinks(lang) {
+    // زبان پیش‌فرض
+    let currentLang = "fa";
+
+    // رندر لینک‌ها
+    function renderLinks(links) {
       linksContainer.innerHTML = "";
-      data[lang].links.forEach((l) => {
+      links.forEach(({ text, href }) => {
         const a = document.createElement("a");
-        a.href = l.href;
+        a.href = href;
         a.target = "_blank";
-        a.textContent = l.text;
+        a.rel = "noopener noreferrer";
+        a.textContent = text;
         linksContainer.appendChild(a);
       });
     }
-    function switchLang(lang) {
-      localStorage.setItem("lang", lang);
+
+    // تغییر زبان
+    function changeLanguage(lang) {
+      if (lang === currentLang) return;
+      currentLang = lang;
+
+      if (lang === "fa") {
+        body.classList.remove("lang-en");
+        body.setAttribute("lang", "fa");
+        body.setAttribute("dir", "rtl");
+        aboutBtn.textContent = "درباره من";
+        contactBtn.textContent = "تماس";
+      } else {
+        body.classList.add("lang-en");
+        body.setAttribute("lang", "en");
+        body.setAttribute("dir", "ltr");
+        aboutBtn.textContent = "About";
+        contactBtn.textContent = "Contact";
+      }
+
       mainTitle.textContent = data[lang].title;
       subTitle.textContent = data[lang].sub;
-      buildLinks(lang);
-      document.getElementById("about-btn").textContent = lang === "fa" ? "درباره من" : "About Me";
-      document.getElementById("contact-btn").textContent = lang === "fa" ? "تماس" : "Contact";
-      aboutClose.textContent = data[lang].closeText;
-      contactClose.textContent = data[lang].closeText;
-      if (lang === "en") {
-        document.body.classList.add("lang-en");
-        document.documentElement.dir = "ltr";
-      } else {
-        document.body.classList.remove("lang-en");
-        document.documentElement.dir = "rtl";
-      }
-    }
+      renderLinks(data[lang].links);
 
-    const savedLang = localStorage.getItem("lang") || "fa";
-    switchLang(savedLang);
-    document.getElementById("btn-fa").onclick = () => switchLang("fa");
-    document.getElementById("btn-en").onclick = () => switchLang("en");
-
-    document.getElementById("about-btn").onclick = () => {
-      const lang = localStorage.getItem("lang") || "fa";
       aboutTitle.textContent = data[lang].aboutTitle;
       aboutText.textContent = data[lang].aboutText;
-      aboutModal.classList.add("show");
-      overlay.classList.add("show");
-    };
+      aboutClose.textContent = data[lang].closeText;
 
-    document.getElementById("contact-btn").onclick = () => {
-      const lang = localStorage.getItem("lang") || "fa";
       contactTitle.textContent = data[lang].contactTitle;
-      contactText.innerHTML = data[lang].contactText;
-      contactModal.classList.add("show");
-      overlay.classList.add("show");
-    };
+      contactText.textContent = data[lang].contactText;
+      contactClose.textContent = data[lang].closeText;
 
-    function closeModal() {
-      aboutModal.classList.remove("show");
-      contactModal.classList.remove("show");
-      overlay.classList.remove("show");
+      // متن فوتر بدون تغییر در دو زبان
+      footerText.textContent = "© Saeed Mojtabazadeh | www.mojtabazadeh.ir";
     }
-    aboutClose.onclick = closeModal;
-    contactClose.onclick = closeModal;
-    overlay.onclick = closeModal;
 
-    // Particles
-    const canvas = document.getElementById("particles"),
-      ctx = canvas.getContext("2d");
-    let particles = [];
-    function createParticles() {
-      const count = Math.floor((window.innerWidth * window.innerHeight) / 12000);
-      particles = Array.from({ length: count }, () => ({
-        x: Math.random() * window.innerWidth,
-        y: Math.random() * window.innerHeight,
-        r: Math.random() * 1.8 + 1,
-        dx: (Math.random() - 0.5) * 0.4,
-        dy: (Math.random() - 0.5) * 0.4,
-      }));
+    // باز/بستن مودال
+    function openModal(modal) {
+      modal.classList.add("show");
+      modalOverlay.classList.add("show");
     }
-    function resizeParticles() {
-      const ratio = window.devicePixelRatio || 1;
-      canvas.width = window.innerWidth * ratio;
-      canvas.height = window.innerHeight * ratio;
-      ctx.setTransform(1, 0, 0, 1, 0, 0);
-      ctx.scale(ratio, ratio);
-      createParticles();
+    function closeModal(modal) {
+      modal.classList.remove("show");
+      modalOverlay.classList.remove("show");
     }
-    resizeParticles();
-    window.addEventListener("resize", resizeParticles);
-    (function draw() {
-      ctx.clearRect(0, 0, window.innerWidth, window.innerHeight);
-      ctx.fillStyle = "rgba(200,150,255,0.8)";
-      particles.forEach((p) => {
-        ctx.beginPath();
-        ctx.arc(p.x, p.y, p.r, 0, Math.PI * 2);
-        ctx.fill();
-        p.x += p.dx;
-        p.y += p.dy;
-        if (p.x < 0 || p.x > window.innerWidth) p.dx *= -1;
-        if (p.y < 0 || p.y > window.innerHeight) p.dy *= -1;
-      });
-      ctx.strokeStyle = "rgba(200,150,255,0.2)";
-      ctx.lineWidth = 0.5;
-      for (let i = 0; i < particles.length; i++) {
-        for (let j = i + 1; j < particles.length; j++) {
-          const dx = particles[i].x - particles[j].x,
-            dy = particles[i].y - particles[j].y,
-            dist = Math.sqrt(dx * dx + dy * dy);
-          if (dist < 120) {
-            ctx.beginPath();
-            ctx.moveTo(particles[i].x, particles[i].y);
-            ctx.lineTo(particles[j].x, particles[j].y);
-            ctx.stroke();
-          }
-        }
-      }
-      requestAnimationFrame(draw);
-    })();
+
+    // رویدادهای دکمه‌ها
+    aboutBtn.addEventListener("click", () => openModal(aboutModal));
+    contactBtn.addEventListener("click", () => openModal(contactModal));
+
+    aboutClose.addEventListener("click", () => closeModal(aboutModal));
+    contactClose.addEventListener("click", () => closeModal(contactModal));
+
+    modalOverlay.addEventListener("click", () => {
+      closeModal(aboutModal);
+      closeModal(contactModal);
+    });
+
+    btnFa.addEventListener("click", () => changeLanguage("fa"));
+    btnEn.addEventListener("click", () => changeLanguage("en"));
+
+    // شروع
+    changeLanguage(currentLang);
+
+    // افکت شناور ذرات (اختیاری)
+    // اگر دوست داشتید میتونم برای شما یه کد ذرات اضافه کنم
+
   </script>
 </body>
 </html>
